--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -23,3 +23,9 @@
 .rodapePrincipal-contatoForm-fieldset{
     display: flex;
 }
+.rodapePrincipal-navMap-list{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 250px;
+}
