--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -25,7 +25,6 @@
 }
 .rodapePrincipal-navMap-list{
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    flex-flow: column wrap;
     height: 250px;
 }
