--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -28,3 +28,11 @@
     flex-flow: column wrap;
     height: 250px;
 }
+.conteudoPrincipal .conteudoPrincipal-cursos{
+    display: flex;
+    flex-wrap: wrap;
+    
+}
+.conteudoPrincipal-cursos-link{
+    width: 23%;
+}
