--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -31,8 +31,75 @@
 .conteudoPrincipal .conteudoPrincipal-cursos{
     display: flex;
     flex-wrap: wrap;
-    
 }
 .conteudoPrincipal-cursos-link{
     width: 23%;
+}
+.videoSobre .container{
+    display: flex;
+    
+}
+.videoSobre-sobre{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 2;
+}
+.videoSobre-sobre-list{
+    flex-grow: 1;
+}
+.videoSobre-video{
+    flex-grow: 1;
+    flex-shrink: 2;
+}
+
+
+
+
+@media (max-width: 768px ){
+
+
+.cabecalhoPrincipal-nav{
+    flex-direction: column;
+}
+.cabecalhoPrincipal .container{
+    flex-direction: column;
+    align-items: initial;
+    text-align: center;
+}
+.conteudoPrincipal-cursos-link{
+    width: 100%; 
+}
+.conteudoPrincipal-cursos{
+    flex-direction: column;
+}
+.rodapePrincipal-navMap-list{
+    height: auto;
+    flex-direction: column;
+}
+.rodapePrincipal-patrocinadores .container{
+    flex-direction: column;
+    align-items: center;
+}
+.rodapePrincipal-contatoForm{
+    width: 100%;
+}
+.rodapePrincipal-patrocinadores-list{
+    width: 100%;
+}
+.rodapePrincipal-contatoForm-fieldset{
+    justify-content: center;
+}
+.cabecalhoPrincipal-nav-link-app{
+    order: -1;
+}
+
+.videoSobre .container{
+    flex-direction: column;
+}
+.videoSobre-video{
+   margin: 0 auto;
+}
+
+
 }
